# familycodex

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Homestead.yaml  Pipfile  README.md  README.rst  bower.json  composer.json  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-image.yml  codeql-analysis.yml  deploy.yml
app/: Family.php  Person.php  PersonAssets.php  RelationshipRole.php  RelationshipType.php
app/Console/: Kernel.php
app/Http/: routes.php
app/Providers/: AppServiceProvider.php
config/: app.php  database.php
data/family/: glenn-and-vivian.yaml  harold-wood-poole-and-kathleen-lucile-jowers.yaml  harold-wood-poole.yaml  mcfakerson.yaml  stanley-scottorn-poole-and-peninah-chase-wood.yaml  sylvester-glenn-smith-and-kate-vivian-poole.yaml
data/pages/: index.yaml
data/people/: fake-mcfakerson.yaml  harold-wood-pooele.yaml  harold-wood-poole.yaml  s-glenn-smith.yaml  stanley-scottorn-poole.yaml
database/migrations/: 2015_07_31_043504_families.php  2015_07_31_043515_people.php  2015_07_31_043537_relationship_types.php  2015_07_31_043602_relationship_roles.php  2015_07_31_043622_relationships.php  2015_07_31_060854_asset_types.php  2015_07_31_061015_assets.php  2015_07_31_061253_person_assets.php  2015_07_31_065515_person_family.php
database/seeds/: DatabaseSeeder.php  RelationshipRolesSeeder.php  (+1 more)
nginx/: default.conf
public/js/: documents.js  (+1 more)
templates/: audio.j2  base.j2  documents.j2  family.j2  index.j2  person.j2  photos.j2  stories.j2  videos.j2
(+18 files in other folders)
