[project]
name = "familycodex"
version = "0.1.0"
description = "Static site generator for sharing family history artifacts."
requires-python = "==3.12.12"
dependencies = [
  "htmlmin==0.1.12",
  "jinja2==3.1.6",
  "markdown==3.10",
  "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
  "livereload==2.7.1",
  "watchdog==6.0.0",
]
